tests/type_errors/negate_non_numeric.nos
# expect_error: does not implement Num
# Issue 21: Unary negation on non-numeric should be caught at compile time
main() = -"hello"
